Bug 386243 - no way to abort update
Summary: no way to abort update
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-27 10:00 UTC by Harald Sitter
Modified: 2017-10-30 16:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2017-10-27 10:00:19 UTC
- start a huge update on your desktop pc
- realize you want to download something else on your laptop
- no way to cancel update even though it isn't doing anything but download everything
- sad panda as laptop is only using part of bandwidth making things take forever
Comment 1 Aleix Pol 2017-10-30 16:07:41 UTC
Git commit 6bdfbdefc25b996d12332d9b3e6433f3cac33b73 by Aleix Pol.
Committed on 30/10/2017 at 16:05.
Pushed by apol into branch 'master'.

Change the update all button into a cancel button while updating

M  +10   -1    discover/qml/UpdatesPage.qml
M  +5    -0    libdiscover/resources/ResourcesUpdatesModel.cpp
M  +3    -0    libdiscover/resources/ResourcesUpdatesModel.h

https://commits.kde.org/discover/6bdfbdefc25b996d12332d9b3e6433f3cac33b73