Change the update all button into a cancel button while updating

BUG: 386243